first logo test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="navbar-toggle" id="js-navbar-toggle">
                 <i class="fas fa-bars fa-lg"></i>
             </span>
-            <a href="#" class="logo">logo</a>
+           <a href="#" class="logo"><img src="images\logo.svg" alt=""></a>
             <ul class="main-nav" id="js-menu">
                 <li><i class="fas fa-home" style="color: #6772e5"></i>
                     <a href="#" class="nav-links">Home</a>
