--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         <br>
         <h2>I'm a front end web developer and designer from Grand Rapids, Michigan,
             specializing in small business site development and technical search engine optimization.</h2>
-        <!-- <p><span class="typed" style="color: rgb(255, 255, 255)"></span></p> -->
         <br>
        <a href="#about"><button class="hero-button">Learn More</button></a>
         <a href="#projects"><button class="hero-button2">See Projects</button></a>
@@ -91,13 +90,14 @@
 <div class="about-section">
        
         <div class="about-txt" id="about">
-            <p>I am a front end web developer from Grand Rapids, Michigan, specializing
-                in responsive web design built around technical SEO.
-                <br><br> ipsum dolor sit amet consectetur adipisicing elit. Nemo, odit?
-                maxime asperiores molestias, vitae id ipsum, distinctio 
-                laudantium eveniet commodi cum Lorem ipsum dolor sit amet consectetur
-                 adipisicing elit. Lorem, ipsum dolor sit amet consectetur 
-                 adipisicing elit. Doloremque, tenetur. Laudantium, quo. neque!</p>
+            <p>I am web developer and designer interested in all kinds of visual communication.
+                I enjoy utilizing tools and technologies to create web apps that improve user experience
+                and functionality. 
+
+                <br><br>In today's online world, being fast and responsive alone just doesn't cut it.
+                Each project that I develop is built around best practices for search engine 
+                optimization and accesibility. My services include design, development, SEO, 
+                and online marketing.</p>
             </div>
         <div class="about-img">
             <img src="images/about-pic-phone.svg" alt="">
@@ -115,12 +115,11 @@
         <i class="fas fa-cog counter-rotate"></i>
         </div>
     <h2>What I do</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Temporibus consequatur reiciendis facere labore minus ullam 
-        recusandae fugit pariatur molestias voluptates
-        orem ipsum dolor sit amet consectetur adipisicing elit. 
-        Temporibus consequatur reiciendis facere labore minus ullam 
-        recusandae fugit pariatur molestias voluptates.</p>
+    <p>Utilizing a variety of languages and technologies, I develop efficient and effective
+         web applications. Having a website with a well-built foundation is the key to developing
+         a strong online presence and remaining competitive. I work with many tools and frameworks
+         to complete a project and I am happy to learn new technologies that will enable a better final product. 
+    </p>
     </div>
     
 <section class="skillsSection" id="skills">
