test for max width

--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@
                 I enjoy utilizing tools and technologies to create web apps that improve user experience
                 and functionality. 
 
-                <br><br>In today's online world, being fast and responsive alone just doesn't cut it.
-                Each project that I develop is built around best practices for search engine 
-                optimization and accesibility. My services include design, development, SEO, 
-                and online marketing.</p>
+                <br><br>I have worked with many frameworks and libraries
+                to complete a variety projects and I am always happy to learn new technologies that will enable 
+                a better final product.</p>
+
+                  <a href="#contact" id="aboutContact">
+                      <p id="contact-jump">Contact me to get started<i class="fas fa-arrow-right"></i></p>
+                    </a>
+
             </div>
         <div class="about-img">
             <img src="images/about-pic-phone.svg" alt="">
@@ -116,9 +120,11 @@
         </div>
     <h2>What I do</h2>
     <p>Utilizing a variety of languages and technologies, I develop efficient and effective
-         web applications. Having a website with a well-built foundation is the key to developing
-         a strong online presence and remaining competitive. I work with many tools and frameworks
-         to complete a project and I am happy to learn new technologies that will enable a better final product. 
+         web applications. Having a website with a solid foundation is the key to developing
+         a strong online presence and remaining competitive.  In today's online world, being fast and responsive alone just doesn't cut it.
+         Each project that I develop is built around best practices for search engine 
+         optimization and accesibility. My services include design, development, SEO, 
+         and online marketing.
     </p>
     </div>
     
@@ -170,7 +176,7 @@
             <div class="projectOneRight">
                     <h2>EZ-Hang Door</h2>
                     <br>
-                    <p>Ecommerce and how-to site built for a construction products company specializing in door installation. Site built using
+                    <p>E-commerce and how-to site built for a construction products company specializing in door installation. Site built using
                         WordPress, Woocommerce, Divi, and custom CSS.
                     </p>
                     <button class="project-live">Live Site</button>
@@ -223,14 +229,14 @@
             <div class="contact-info">
                 <img src="images/care-about-planet.svg" alt="">
                 <form id="form" action="POST" data-netlify="true">
-                    <input type="text" name="name" placeholder="Full Name" />
-                    <input type="email" name="email" placeholder="Email"/>
+                    <input type="text" name="name" placeholder="Full Name" required />
+                    <input type="email" name="email" placeholder="Email" required/>
                     <input type="text" name="company" placeholder="Company" />
                 
                 </div>
                     <div class="contact-message">
                         <img src="images/paper-plane.svg">
-                        <textarea name="message" placeholder="I am currently accepting freelance work. Send me a message to get in touch!" onkeyup="adjust_textarea(this)"></textarea>
+                        <textarea required name="message" placeholder="I am currently accepting freelance work. Send me a message to get in touch!" onkeyup="adjust_textarea(this)"></textarea>
                         </div>
                 </form>
         </div>
