Sanitize css test - off

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Google font cdn -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <!-- CSS Image Hover stylesheet -->
-    <link rel="stylesheet" href="css/imagehover.min.css">
+    <!--Sanitize CSS-->
+ 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- typed js cdn link for typed effect on hero image -->
