--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <!-- typed js cdn link for typed effect on hero image -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <script type="text/javascript" src="main.js"></script>
+    <!-- meta descriptions -->
+    <meta property="og:site_name" content="Trey Gordon Web Development"/>
+    <meta property="og:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+        specializing in small business site development and technical search engine optimization."/>
+
 </head>
 <body>
     
@@ -123,7 +128,7 @@
          web applications. Having a website with a solid foundation is the key to developing
          a strong online presence and remaining competitive.  In today's online world, being fast and responsive alone just doesn't cut it.
          Each project that I develop is built around best practices for search engine 
-         optimization and accesibility. My services include design, development, SEO, 
+         optimization and accessibility. My services include design, development, SEO, 
          and online marketing.
     </p>
     </div>
