--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <script type="text/javascript" src="main.js"></script>
     <!-- meta descriptions -->
-    <meta property="og:site_name" content="Trey Gordon Web Development"/>
-    <meta property="og:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+    <meta name="title" content="Trey Gordon Web Development"/>
+    <meta name="description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
         specializing in small business site development and technical search engine optimization."/>
 
 </head>
