updated meta descriptions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   href="https://unpkg.com/sanitize.css"
   rel="stylesheet"
 />
-    <title>Trey Gordon Portfolio</title>
+    <title>Trey Gordon Web Development</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <!-- Google font cdn -->
@@ -18,13 +18,12 @@
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <!-- typed js cdn link for typed effect on hero image -->
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <script type="text/javascript" src="main.js"></script>
     <!-- meta descriptions -->
     <meta name="title" content="Trey Gordon Web Development"/>
     <meta name="description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
         specializing in small business site development and technical search engine optimization."/>
+    <meta property="og:image" content="images\hero-section.JPG">
 
 </head>
 <body>
