--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="toolIcons">
             <img src="/images/wordpress-icon.svg" alt="">
             <img src="/images/github-icon.svg" alt="">
-            <img src="/images/figma.png" alt="">
+            <img src="/images/figma.svg" alt="" id="figma">
             <img src="/images/visual-studio-code.svg" alt="">
             <img src="/images/netlify.svg" alt="">
         </div>
