modal text update

--- a/index.html
+++ b/index.html
@@ -260,12 +260,14 @@
             <h2>About the Site</h2>
             </div>
             <div class="modal-body">
-            <p>Design for this site is based on the homepage for stripe.com. Being a highly revered design, I
-                thought building my portfolio as a mock up of Stripe's homepage would be a good 
-                opportunity to showcase an ability to code a given design. As well as demonstrating skill 
-                utilizing flexbox, grid, and custom SVG's.
-                <br><br>
-                Other than the color scheme, no code was copied from Stripe.
+                <p>The Design for this site is based on the homepage for stripe.com. Being a highly revered design, I
+                    thought building my portfolio as a mock up of Stripe's homepage would be a good 
+                    opportunity to showcase an ability to code a given design from scratch. This was also an 
+                    opportunity to demonstrate skill utilizing flexbox, grid, and custom SVG's.
+                        <br><br>
+                    The site is built using plain HTML, CSS and vanilla Javascript. Icons are from font-awesome, and fonts
+                    from Google Fonts. Other than the color scheme, no code was copied from Stripe.
+                </p>
             </div>
             <div class="modal-footer">
                 <h3>Modal Footer</h3>
