--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <h2>About the Site</h2>
             </div>
             <div class="modal-body">
-                <p>The design for this site is based on the homepage for stripe.com. Being a highly revered design, I
+                <p>The design for this site is based on the homepage for stripe.com. Being a highly regarded design, I
                     thought building my portfolio as a mock up of Stripe's homepage would be a good 
                     opportunity to showcase an ability to code a given design from scratch. This was also an 
                     opportunity to demonstrate skill utilizing flexbox, grid, and custom SVG's.
