--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     opportunity to demonstrate skill utilizing flexbox, grid, and custom SVG's.
                         <br><br>
                     The site is built using plain HTML, CSS and vanilla Javascript. Icons are from font-awesome, and fonts
-                    from Google Fonts. Other than the color scheme, no code was copied from Stripe.
+                    are from Google Fonts. Other than the color scheme, no code was copied from Stripe.
                 </p>
             </div>
             <div class="modal-footer">
