update project buttons

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
 <head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127315011-2"></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-127315011-2');
+
 </script>
 
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- Primary Meta Tags -->
 <title>Trey Gordon Web Development</title>
 <meta name="title" content="Trey Gordon Web Development - Grand Rapids, Michigan">
@@ -42,11 +43,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
     <script type="text/javascript" src="main.js"></script>
 </head>
 
 <body>
-
 <!-- Start Nav Bar -->
     <nav class="navbar">
             <span class="navbar-toggle" id="js-navbar-toggle">
@@ -181,8 +182,8 @@
 </section>
     
 
-<!-- Start Projects section -->
 
+<!-- Start Projects section -->
 
 
 <div class="title" id="projects">
@@ -202,7 +203,7 @@
             <p>E-commerce and how-to site built for a construction products company specializing in door installation. Site built using
                 WordPress, Woocommerce, Divi, and custom CSS.
             </p>
-            <button class="project-live">Live Site</button>
+            <a href="https://ezhangdoor.com" id="project-live" target="blank">Live Site</a>
         </div>
     </div>
 
@@ -217,8 +218,8 @@
                     <h2>Heritage Farm Market</h2>
                     <br>
                     <p>WordPress site built for a local farm market using
-                     custom Elementor and custom CSS. Built, customized, and deployed entire site.</p>  
-                    <button class="project-live">Live Site</button>
+                     Elementor and custom CSS. Built, customized, and deployed entire site.</p>  
+                     <a href="https://heritagefarmmarket.com" id="project-live" target="blank">Live Site</a>
 
                 </div>
         </div>
@@ -236,9 +237,9 @@
                 <div class="projectOneRight">
                         <h2>Javascript Speed Typer</h2>
                         <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quisquam quia iste sint accusantium molestias.</p>  
-                        <button class="project-live">Live Site</button>
-                        <span><button class="project-live">code</button></span>
+                        <p>Speed typing game using english and pali words. Built using vanilla javascript and Boostrap 4.</p>  
+                        <a href="https://js-speed-typer.netlify.com/" id="project-live" target="blank">Live Site</a>
+                        <span><a href="https://github.com/treyg/speed-typer" id="project-live" target="blank">code</a></span> 
                     </div>
     </div>
 
