--- a/index.html
+++ b/index.html
@@ -14,12 +14,29 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trey Gordon Web Development</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Trey Gordon Web Development"/>
-    <meta name="description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
-        specializing in small business site development and technical search engine optimization."/>
-    <meta property="og:image" content="images\hero-section.JPG">
+
+    <!-- Primary Meta Tags -->
+<title>Trey Gordon Web Development - Grand Rapids, Michigan</title>
+<meta name="title" content="Trey Gordon Web Development - Grand Rapids, Michigan">
+<meta name="description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+        specializing in small business site development and technical search engine optimization.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://treygordon.com/">
+<meta property="og:title" content="Trey Gordon Web Development - Grand Rapids, Michigan">
+<meta property="og:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+        specializing in small business site development and technical search engine optimization.">
+<meta property="og:image" content="images\hero-section.JPG">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://treygordon.com/">
+<meta property="twitter:title" content="Trey Gordon Web Development - Grand Rapids, Michigan">
+<meta property="twitter:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+        specializing in small business site development and technical search engine optimization.">
+<meta property="twitter:image" content="images\hero-section.JPG">
+
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <!-- Google font cdn -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
