update project links

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <p>E-commerce and how-to site built for a construction products company specializing in door installation. Site built using
                 WordPress, Woocommerce, Divi, and custom CSS.
             </p>
-            <button class="project-live">Live Site</button>
+            <a href="https://ezhangdoor.com" class="project-live" target="blank">Live Site</a>
         </div>
     </div>
 
@@ -205,7 +205,7 @@
                     <br>
                     <p>WordPress site built for a local farm market using
                      custom Elementor and custom CSS. Built, customized, and deployed entire site.</p>  
-                    <button class="project-live">Live Site</button>
+                    <a href="https://heritagefarmmarket.com" class="project-live" target="blank">Live Site</a>
 
                 </div>
         </div>
@@ -224,8 +224,8 @@
                         <h2>Javascript Speed Typer</h2>
                         <br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quisquam quia iste sint accusantium molestias.</p>  
-                        <button class="project-live">Live Site</button>
-                        <span><button class="project-live">code</button></span>
+                        <a href="https://js-speed-typer.netlify.com/" class="project-live" target="blank">Live Site</a>
+                        <span><a href="https://github.com/treyg/speed-typer"class="project-live" target="blank">code</a></span>
                     </div>
     </div>
 
