--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   gtag('config', 'UA-127315011-2');
 </script>
 
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Trey Gordon Web Development</title>
@@ -21,6 +20,7 @@
         specializing in small business site development and technical search engine optimization."/>
     <meta property="og:image" content="images\hero-section.JPG">
     
+    <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <!-- Google font cdn -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
