update about img

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 and functionality. 
 
                 <br><br>I have worked with many frameworks and libraries
-                to complete a variety projects and I am always happy to learn new technologies that will enable 
+                to complete a variety projects and am always happy to learn new technologies that will enable 
                 a better final product.</p>
 
                 <a href="#contact" id="aboutContact">
@@ -132,7 +132,8 @@
     <h2>What I do</h2>
         <p>Utilizing a variety of languages and technologies, I develop efficient and effective
             web applications. Having a website with a solid foundation is the key to developing
-            a strong online presence and remaining competitive.  In today's online world, being fast and responsive alone just doesn't cut it.
+            a strong online presence and remaining competitive.  In today's online world, being 
+            fast and responsive alone just doesn't cut it.
             Each project that I develop is built around best practices for search engine 
             optimization and accessibility. My services include design, development, SEO, 
             and online marketing.
@@ -220,7 +221,7 @@
                 <div class="projectOneRight">
                         <h2>Javascript Speed Typer</h2>
                         <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quisquam quia iste sint accusantium molestias.</p>  
+                        <p>Speed typing game using English and Pali words, built using vanilla javascript and Bootstrap for styling.</p>  
                         <a href="https://js-speed-typer.netlify.com/" class="project-live" target="blank">Live Site</a>
                         <span><a href="https://github.com/treyg/speed-typer"class="project-live" target="blank">code</a></span>
                     </div>
