update alt tags and lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"
 <head>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,7 +38,7 @@
             <span class="navbar-toggle" id="js-navbar-toggle">
                 <i class="fas fa-bars fa-lg"></i>
             </span>
-           <a href="#" class="logo"><img src="" alt="">trey</a>
+           <a href="#" class="logo" alt="">trey</a>
             <ul class="main-nav" id="js-menu">
                 <li><i class="fas fa-home" style="color: #6772e5"></i>
                     <a href="#" class="nav-links">Home</a>
@@ -84,7 +84,7 @@
   
 <!-- Flat image div -->
 <div class="flatwrap">
-    <img class="flat" src="images/tablet-phone.svg" alt="">
+    <img class="flat" src="images/tablet-phone.svg" alt="large phone-tablet">
 </div>
     
 <!-- About Title and Lines -->
@@ -115,13 +115,13 @@
 
         </div>
             <div class="about-img">
-                <img src="images/about-pic-phone.svg" alt="">
+                <img src="images/about-pic-phone.svg" alt="about pic">
             </div>
 
     </div>
 
 <div class="mobile-section">
-    <img src="images\mini-svg.svg" alt="">
+    <img src="images\mini-svg.svg" alt="phone tablet mobile image">
 </div>
 
 <div class="what">
@@ -179,7 +179,7 @@
 <!-- Project One - EZ-Hang -->
     <div class="project1">
         <div class="projectOneLeft">
-        <img src="images\ezhangproject1.png" alt="computer-screen" id="">
+        <img src="images\ezhangproject1.png" alt="computer-screen Ez-Hang Door" id="">
         </div> 
         <div class="projectOneRight">
             <h2>EZ-Hang Door</h2>
@@ -196,7 +196,7 @@
 <!-- Project Two - Heritage -->
     <div class="project1">
             <div class="projectOneLeft">
-            <img src="images\heritageproject1.png" alt="computer-screen" id="computer-screen2">
+            <img src="images\heritageproject1.png" alt="computer-screen heritage farms" id="computer-screen2">
                 </div>
             <div class="projectOneRight">
                     <h2>Heritage Farm Market</h2>
@@ -216,7 +216,7 @@
 
 <div class="project1">
         <div class="projectOneLeft">
-        <img src="images\speedtyperproject1.png" alt="computer-screen">
+        <img src="images\speedtyperproject1.png" alt="computer-screen Javascript speed typer">
             </div>
                 <div class="projectOneRight">
                         <h2>Javascript Speed Typer</h2>
@@ -235,7 +235,7 @@
     <div class="contact-bg" id="contact">
         <div class="contact-box-section">
             <div class="contact-info">
-                <img src="images/care-about-planet.svg" alt="">
+                <img src="images/care-about-planet.svg" alt="contact globe">
                 <form id="form" action="POST" data-netlify="true">
                     <input type="text" name="name" placeholder="Full Name" required />
                     <input type="email" name="email" placeholder="Email" required/>
@@ -243,7 +243,7 @@
                 
                 </div>
                     <div class="contact-message">
-                        <img src="images/paper-plane.svg">
+                        <img src="images/paper-plane.svg" alt="contact plane">
                         <textarea required name="message" placeholder="I am currently accepting freelance work. Send me a message to get in touch!" onkeyup="adjust_textarea(this)"></textarea>
                         </div>
                 </form>
