--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
             <div class="contact-info">
                 <img src="images/care-about-planet.svg" alt="contact globe">
                 <form id="form" action="POST" data-netlify="true">
-                    <input type="text" name="name" placeholder="Full Name" label for="name" required />
+                   <label for="name"></label> 
+                        <input type="text" name="name" placeholder="Full Name" required />
                     <input type="email" name="email" placeholder="Email" label for="email" required/>
                     <input type="text" name="company" placeholder="Company" label for="company"/>
                 
