--- a/index.html
+++ b/index.html
@@ -238,10 +238,11 @@
                 <img src="images/care-about-planet.svg" alt="contact globe">
                 <form id="form" action="POST" data-netlify="true">
                    <label for="name"></label> 
-                        <input type="text" name="name" placeholder="Full Name" required />
-                    <input type="email" name="email" placeholder="Email" label for="email" required/>
-                    <input type="text" name="company" placeholder="Company" label for="company"/>
-                
+                        <input type="text" name="name" placeholder="Full Name" required/>
+                    <label for="email">email</label> 
+                            <input type="email" name="email" placeholder="Email" label for="email" required/>
+                        <label for="company"></label> 
+                            <input type="text" name="company" placeholder="Company" label for="company"/>
                 </div>
                     <div class="contact-message">
                         <img src="images/paper-plane.svg" alt="contact plane">
