--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <form id="form" action="POST" data-netlify="true">
                    <label for="name"></label> 
                         <input type="text" name="name" placeholder="Full Name" required/>
-                    <label for="email">email</label> 
+                    <label for="email"></label> 
                             <input type="email" name="email" placeholder="Email" label for="email" required/>
                         <label for="company"></label> 
                             <input type="text" name="company" placeholder="Company" label for="company"/>
