--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
   <div class="hero-text">
-        <h1><span>Hi, I'm Trey, a front end web developer</span></h1>
+        <h1><span>Hi, I'm Trey - a front end web developer</span></h1>
         <br>
         <h2>I'm a front end web developer and designer from Grand Rapids, Michigan,
             specializing in small business site development and technical search engine optimization.</h2>
