Add shopping app

--- a/index.html
+++ b/index.html
@@ -211,6 +211,21 @@
 
     <hr class="divider-line">
 
+<div class="project1">
+    <div class="projectOneLeft">
+    <img src="images\shopcomp.png" alt="computer-screen simple shopper app">
+        </div>
+            <div class="projectOneRight">
+                    <h2>Simple Shopper Progressive Web App</h2>
+                    <br>
+                    <p>Shopping list application built with HTML, CSS, and vanilla Javascript. Add, check, and delete items. List saves to local storage.</p>  
+                    <a href="https://simpleshopper.netlify.com/" class="project-live" target="blank">Live Site</a>
+                    <span><a href="https://github.com/treyg/shopping-list-pwa"class="project-live" target="blank">code</a></span>
+                </div>
+</div>
+
+<hr class="divider-line">
+
 
 <!-- Project 3 - JS -->
 
