update folder structure/separate media queries

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <meta property="og:image" content="images\hero-section.JPG">
     
     <!-- Main CSS stylesheet link -->
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css\media.css">
     <!-- Google font cdn -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
