--- a/index.html
+++ b/index.html
@@ -104,15 +104,12 @@
             <p>I am web developer and designer interested in all kinds of visual communication.
                 I enjoy utilizing tools and technologies to create web apps that improve user experience
                 and functionality. 
-
                 <br><br>I have worked with many frameworks and libraries
-                to complete a variety projects and am always happy to learn new technologies that will enable 
+                to complete a variety projects and am always learning new technologies that will enable 
                 a better final product.</p>
-
                 <a href="#contact" id="aboutContact">
                     <p id="contact-jump">Contact me to get started<i class="fas fa-arrow-right"></i></p>
                 </a>
-
         </div>
             <div class="about-img">
                 <img src="images/about-pic-phone.svg" alt="about pic">
