--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="areaOne"></div>
     <div class="areaTwo rellax" data-rellax-speed="-3"></div>
     <div class="areaThree"></div>
-    <div class="areaFour rellax" data-rellax-speed="2"></div>
+    <div class="areaFour" data-rellax-speed="2"></div>
     <div class="areaFive"></div>
     <div class="areaSix"></div>
 
