add scroll to grid area 4

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <!-- Grid header section -->
 
 <div class="grid-container">
-    <div class="areaOne"></div>
-    <div class="areaTwo rellax" data-rellax-speed="-3"></div>
+    <div class="areaOne rellax" data-rellax-speed="-4"></div>
+    <div class="areaTwo"></div>
     <div class="areaThree"></div>
-    <div class="areaFour" data-rellax-speed="2"></div>
+    <div class="areaFour rellax" data-rellax-speed="2"></div>
     <div class="areaFive"></div>
     <div class="areaSix"></div>
 
@@ -80,7 +80,7 @@
     </div>
   
 <!-- Flat image div -->
-<div class="flatwrap rellax" data-rellax-speed="-1">
+<div class="flatwrap rellax" data-rellax-speed="1">
     <img class="flat" src="images/tablet-phone.svg" alt="large phone-tablet">
 </div>
     
