update meta image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="title" content="Trey Gordon Web Development - Grand Rapids, Michigan"/>
     <meta name="description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
         specializing in small business site development and technical search engine optimization."/>
-    <meta property="og:image" content="images\hero-section.JPG">
+    <meta property="og:image" content="images\hero-section-shot.png">
     
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
