--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         specializing in small business site development and technical search engine optimization."/>
     <meta property="og:image" content="images\hero-section-shot.png">
     
+    <meta name="twitter:card" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+    specializing in small business site development and technical search engine optimization." />
+
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css\media.css">
