--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
     <meta name="twitter:card" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
     specializing in small business site development and technical search engine optimization." />
+    <meta name="twitter:site" content="Trey Gordon - Frontend Developer" />
 
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
