udpate twitter meta card

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         specializing in small business site development and technical search engine optimization."/>
     <meta property="og:image" content="images\hero-section-shot.png">
     
-    <meta name="twitter:card" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
-    specializing in small business site development and technical search engine optimization." />
-    <meta name="twitter:site" content="Trey Gordon - Frontend Developer" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="images\hero-section-shot.png" />
+    <meta name="twitter:image:alt" content="Trey Gordon - Frontend Web developer" />
+    <meta name="twitter:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
+    specializing in small business site development and technical search engine optimization."
+    />
 
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
