--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
         specializing in small business site development and technical search engine optimization."/>
     <meta property="og:image" content="images\hero-section-shot.png">
     
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="images\hero-section-shot.png" />
-    <meta name="twitter:image:alt" content="Trey Gordon - Frontend Web developer" />
-    <meta name="twitter:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
-    specializing in small business site development and technical search engine optimization."
-    />
+    <meta property="og:url" content="https://treygordon.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Trey Gordon - Front-end Web Developer" />
+    <meta property="og:description" content="Hi, I'm Trey, a front-end web developer and designer from Grand Rapids, Michigan"/>
+    
+    <meta property="og:image" content="images\hero-section-shot.png" />
+    <meta property="og:image:alt" content="Trey Gordon Web Development" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
@@ -71,9 +75,9 @@
 
 
   <div class="hero-text rellax" data-rellax-speed="-1">
-        <h1><span>Hi, I'm Trey - a front end web developer</span></h1>
+        <h1><span>Hi, I'm Trey - a front-end web developer</span></h1>
         <br>
-        <h2>I'm a front end web developer and designer from Grand Rapids, Michigan,
+        <h2>I'm a front-end web developer and designer from Grand Rapids, Michigan,
             specializing in small business site development and technical search engine optimization.</h2>
         <br>
        <a href="#about"><button class="hero-button">Learn More</button></a>
