--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <meta property="og:image" content="images\hero-section-shot.png" />
     <meta property="og:image:alt" content="Trey Gordon Web Development" />
     <meta property="og:image:type" content="image/png" />
-    <!-- <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" /> -->
+    <meta property="og:image:width" content="1891" />
+    <meta property="og:image:height" content="876" />
 
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
