--- a/index.html
+++ b/index.html
@@ -19,22 +19,12 @@
         specializing in small business site development and technical search engine optimization."/>
     <meta property="og:image" content="images\hero-section-shot.png">
     
-    <!-- <meta property="og:url" content="https://treygordon.com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Trey Gordon - Front-end Web Developer" />
-    <meta property="og:description" content="Hi, I'm Trey, a front-end web developer and designer from Grand Rapids, Michigan"/>
-    
-    <meta property="og:image" content="images\hero-section-shot.png" />
-    <meta property="og:image:alt" content="Trey Gordon Web Development" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1891" />
-    <meta property="og:image:height" content="876" /> -->
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TreyGordon" />
     <meta name="twitter:title" content="Trey Gordon - Front-end Web Developer" />
     <meta name="twitter:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan" />
-    <meta name="twitter:image" content="images\hero-section-shot.png" />
+    <meta name="twitter:image" content="https://treygordon.com/images/hero-section-shot.png" />
 
     <!-- Main CSS stylesheet link -->
     <link rel="stylesheet" type="text/css" media="screen" href="css\main.css">
