update image size

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <meta property="og:image" content="images\hero-section-shot.png">
     
 
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@TreyGordon" />
     <meta name="twitter:title" content="Trey Gordon - Front-end Web Developer" />
-    <meta name="twitter:description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan" />
+    <meta name="twitter:description" content="Hi, I'm Trey, a front-end web developer and designer from Grand Rapids, Michigan." />
     <meta name="twitter:image" content="https://treygordon.com/images/hero-section-shot.png" />
 
     <!-- Main CSS stylesheet link -->
