test rellax mobile

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <meta name="description" content="Hi, I'm Trey, a front end web developer and designer from Grand Rapids, Michigan,
         specializing in small business site development and technical search engine optimization."/>
     <meta property="og:image" content="images\hero-section-shot.png">
-    
-
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@TreyGordon" />
     <meta name="twitter:title" content="Trey Gordon - Front-end Web Developer" />
@@ -114,7 +112,7 @@
             </div>
     </div>
 <div class="mobile-section">
-    <img src="images\mini-svg.svg" alt="phone tablet mobile image">
+    <img src="images\mini-svg.svg"  class="rellax" data-rellax-speed="-1" alt="phone tablet mobile image">
 </div>
 <div class="what">
     <div class="cog">  
