--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
     </div>
 <div class="mobile-section">
-    <img src="images\mini-svg.svg"  class="rellax" data-rellax-speed="1" alt="phone tablet mobile image">
+    <img src="images\mini-svg.svg" alt="phone tablet mobile image">
 </div>
 <div class="what">
     <div class="cog">  
