add node/fix margin mobile

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <img src="images\css-2.svg" alt="CSS3" title="CSS">
             <img src="images/javascript.svg" alt="Javascript" title="Javascript">
             <img src="/images/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
-            <img src="/images/react.svg" alt="React" title="React">
+            <img src="images\nodelogo.png" alt="node" title="node" id="node">
             
         </div>
     </div>
