--- a/index.html
+++ b/index.html
@@ -181,6 +181,24 @@
 
     <hr class="divider-line">
 
+<!-- Project 2 stons -->
+    <div class="project1">
+        <div class="projectOneLeft">
+        <img src="images\stonshome.png" alt="computer-screen stons center app">
+            </div>
+                <div class="projectOneRight">
+                        <h2>StonsCenter - Detroit Pistons Web App</h2>
+                        <br>
+                        <p>Detroit Pistons web app for news and live scores.
+                            News data from Azure search and ESPN API. Stats and live scores from ESPN. App built with Node, Firebase and Tailwind CSS</p>  
+                        <a href="https://www.stonscenter.com/" class="project-live" target="blank">Live Site</a>
+                        <span><a href="https://github.com/treyg/pistons-tracker"class="project-live" target="blank">code</a></span>
+                    </div>
+    </div>
+    
+    <hr class="divider-line">
+    
+
 <!-- Project Two - Heritage -->
     <div class="project1">
             <div class="projectOneLeft">
